--- a/Question_5.ipynb
+++ b/Question_5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fa4d091c",
+   "id": "d5dd659b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e797d795",
+   "id": "1450d111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "db355037",
+   "id": "7b509f1f",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "869a8ce5",
+   "id": "42b82fa0",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e7d309ce",
+   "id": "e98f0024",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2232edb4",
+   "id": "c0e4a02d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bb5aa16d",
+   "id": "b44c5d2d",
    "metadata": {},
    "outputs": [
     {
@@ -327,13 +327,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "38ff12e7",
+   "id": "2bb7290b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002198F1B3F70>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000021DBFF242E0>"
       ]
      },
      "execution_count": 8,
@@ -347,28 +347,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "be881ab9",
+   "execution_count": 9,
+   "id": "d646b7c7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Argentina', 'Italy', 'Israel', 'Isle of Man', 'Ireland',\n",
-       "       'Indonesia', 'India', 'Iceland', 'Hungary', 'Greece', 'Gibraltar',\n",
-       "       'Germany', 'France', 'Finland', 'Estonia', 'England', 'Ecuador',\n",
-       "       'Denmark', 'Czechia', 'Cyprus', 'Croatia', 'Costa Rica', 'China',\n",
-       "       'Chile', 'Canada', 'Bulgaria', 'Latvia', 'Brazil', 'Lithuania',\n",
-       "       'Malta', 'Wales', 'United States', 'United Kingdom',\n",
-       "       'United Arab Emirates', 'Turkey', 'Switzerland', 'Sweden', 'Spain',\n",
-       "       'Slovenia', 'Slovakia', 'Singapore', 'Seychelles', 'Serbia',\n",
-       "       'Scotland', 'Saudi Arabia', 'Russia', 'Romania', 'Portugal',\n",
-       "       'Poland', 'Panama', 'Oman', 'Norway', 'Northern Ireland',\n",
-       "       'Netherlands', 'Mexico', 'Luxembourg', 'Belgium', 'Kuwait',\n",
-       "       'Bahrain', 'Austria'], dtype=object)"
+       "array(['Argentina', 'Austria', 'Bahrain', 'Belgium', 'Brazil', 'Bulgaria',\n",
+       "       'Canada', 'Chile', 'China', 'Costa Rica', 'Croatia', 'Cyprus',\n",
+       "       'Czechia', 'Denmark', 'Ecuador', 'England', 'Estonia', 'Finland',\n",
+       "       'France', 'Germany', 'Gibraltar', 'Greece', 'Hungary', 'Iceland',\n",
+       "       'India', 'Indonesia', 'Ireland', 'Isle of Man', 'Israel', 'Italy',\n",
+       "       'Kuwait', 'Latvia', 'Lithuania', 'Luxembourg', 'Malta', 'Mexico',\n",
+       "       'Netherlands', 'Northern Ireland', 'Norway', 'Oman', 'Panama',\n",
+       "       'Poland', 'Portugal', 'Romania', 'Russia', 'Saudi Arabia',\n",
+       "       'Scotland', 'Serbia', 'Seychelles', 'Singapore', 'Slovakia',\n",
+       "       'Slovenia', 'Spain', 'Sweden', 'Switzerland', 'Turkey',\n",
+       "       'United Arab Emirates', 'United Kingdom', 'United States', 'Wales'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,8 +379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2c7038ee",
+   "execution_count": 10,
+   "id": "b7b3c8b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "93aab2c9",
+   "id": "48e6b4f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "88f4bfbe",
+   "id": "eb3e6218",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1cef9bea",
+   "id": "f67836d8",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d7967276",
+   "id": "4e05f053",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "055a87b4",
+   "id": "13301820",
    "metadata": {},
    "outputs": [],
    "source": []
