--- a/Question_7.ipynb
+++ b/Question_7.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96c1ba23",
+   "id": "b081aae0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "52518b62",
+   "id": "dea534f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4ae7620e",
+   "id": "08383f90",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "65c22192",
+   "id": "b3862015",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1232468c",
+   "id": "0573de4d",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e93fb8bd",
+   "id": "1a341ddc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d3454a1",
+   "id": "7373ec19",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e8ec3849",
+   "id": "5b8d24ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb71fa76",
+   "id": "f23c1f95",
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +213,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9fb9b58e",
+   "id": "5c004243",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002ABB9EE6400>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000168B9FE6400>"
       ]
      },
      "execution_count": 8,
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d8bc5bc9",
+   "id": "e691cd98",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f28ae7e7",
+   "id": "4dfc284b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "333e5ef7",
+   "id": "c76ece95",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aea250b3",
+   "id": "998914f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a22d404e",
+   "id": "3b81a42f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "026a3391",
+   "id": "d66bc3b4",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "625fea5e",
+   "id": "fc531480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f0d61da3",
+   "id": "74269c57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a9f7e52e",
+   "id": "43ff417b",
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0883f4af",
+   "id": "a1cb2fb0",
    "metadata": {},
    "outputs": [
     {
@@ -741,8 +741,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "f1b43c2e",
+   "execution_count": 19,
+   "id": "564eb64a",
    "metadata": {},
    "outputs": [
     {
@@ -765,8 +765,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "4e7364aa",
+   "execution_count": 20,
+   "id": "91380578",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
        "Name: 48, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,8 +790,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "ade35d16",
+   "execution_count": 21,
+   "id": "b0e41cd6",
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
        "49    Bahrain  12/24/2020             11106.0  Pfizer/BioNTech, Sinopharm"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ba1b0c0",
+   "id": "573b55f2",
    "metadata": {},
    "outputs": [],
    "source": []
