--- a/vacinattion_stats.ipynb
+++ b/vacinattion_stats.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0855b57f",
+   "id": "dbf5c5d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0268ff5a",
+   "id": "98bc3ecd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "da5e808d",
+   "id": "311efb51",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "95c22c38",
+   "id": "3fdaf47e",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bb8d60e6",
+   "id": "85fe66e7",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cd396efa",
+   "id": "89e34438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,8 +172,10 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ee756fa5",
-   "metadata": {},
+   "id": "3352fc94",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -327,13 +329,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bbc0ad73",
+   "id": "cc31e026",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1466568.0"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001DECD1160D0>"
       ]
      },
      "execution_count": 8,
@@ -342,13 +344,143 @@
     }
    ],
    "source": [
-    "data[data[\"date\"]==\"1/6/2021\"][\"daily_vaccinations\"].sum()"
+    "data.groupby(\"country\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a007169c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.sort_values(\"daily_vaccinations\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "33f804a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Argentina', 'Italy', 'Israel', 'Isle of Man', 'Ireland',\n",
+       "       'Indonesia', 'India', 'Iceland', 'Hungary', 'Greece', 'Gibraltar',\n",
+       "       'Germany', 'France', 'Finland', 'Estonia', 'England', 'Ecuador',\n",
+       "       'Denmark', 'Czechia', 'Cyprus', 'Croatia', 'Costa Rica', 'China',\n",
+       "       'Chile', 'Canada', 'Bulgaria', 'Latvia', 'Brazil', 'Lithuania',\n",
+       "       'Malta', 'Wales', 'United States', 'United Kingdom',\n",
+       "       'United Arab Emirates', 'Turkey', 'Switzerland', 'Sweden', 'Spain',\n",
+       "       'Slovenia', 'Slovakia', 'Singapore', 'Seychelles', 'Serbia',\n",
+       "       'Scotland', 'Saudi Arabia', 'Russia', 'Romania', 'Portugal',\n",
+       "       'Poland', 'Panama', 'Oman', 'Norway', 'Northern Ireland',\n",
+       "       'Netherlands', 'Mexico', 'Luxembourg', 'Belgium', 'Kuwait',\n",
+       "       'Bahrain', 'Austria'], dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"country\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6446d4f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_median =data.groupby(\"country\").median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c6bba0be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country_median=country_median.sort_values(\"daily_vaccinations\",ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "57c742e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daily_vaccinations</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>United States</th>\n",
+       "      <td>378253.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>China</th>\n",
+       "      <td>276786.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>India</th>\n",
+       "      <td>173922.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               daily_vaccinations\n",
+       "country                          \n",
+       "United States            378253.0\n",
+       "China                    276786.0\n",
+       "India                    173922.0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country_median.head(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7e7d591",
+   "id": "18a5ccb9",
    "metadata": {},
    "outputs": [],
    "source": []
